--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/utils": "^1.0.0",
+    "firebase": "^9.8.1",
     "next": "^12.1.4",
     "next-remove-imports": "^1.0.6",
     "next-seo": "^5.3.0",
